crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__set__missing_closing_curly_brace_0.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..47,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 46..47,
                    value: Set(
                        ExprSet {
                            node_index: NodeIndex(None),
                            range: 46..47,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 47..47,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Missing closing curly brace 0: No elements
2 |
3 | {
  |  ^ Syntax Error: unexpected EOF while parsing
  |
